# dotfiles

./: .crates.toml  .gitignore  .gitmodules  .tool-versions  README.txt  apt-packages.txt  gem-packages.txt  install.sh  packages.txt  setup.sh  setup.yml  setup.zsh  starship.toml
config/ranger/dot-config/ranger/plugins/ranger_sixel_render/: README.md  command.py  pyproject.toml
config/ranger/dot-config/ranger/plugins/ranger_sixel_render/stubs/ranger/: __init__.pyi
config/ranger/dot-config/ranger/plugins/ranger_sixel_render/stubs/ranger/api/: __init__.pyi  commands.pyi
config/ranger/dot-config/ranger/plugins/ranger_sixel_render/stubs/ranger/colorschemes/: default.pyi  jungle.pyi  snow.pyi  solarized.pyi
config/ranger/dot-config/ranger/plugins/ranger_sixel_render/stubs/ranger/config/: commands.pyi  commands_sample.pyi
config/ranger/dot-config/ranger/plugins/ranger_sixel_render/stubs/ranger/container/: bookmarks.pyi  directory.pyi  file.pyi  fsobject.pyi  history.pyi  settings.pyi  tags.pyi
config/ranger/dot-config/ranger/plugins/ranger_sixel_render/stubs/ranger/core/: actions.pyi  filter_stack.pyi  fm.pyi  linemode.pyi  loader.pyi  main.pyi  metadata.pyi  runner.pyi  shared.pyi  tab.pyi
config/ranger/dot-config/ranger/plugins/ranger_sixel_render/stubs/ranger/ext/: accumulator.pyi  cached_function.pyi  curses_interrupt_handler.pyi  direction.pyi  get_executables.pyi  hash.pyi  human_readable.pyi  img_display.pyi  iter_tools.pyi  keybinding_parser.pyi  lazy_property.pyi  logutils.pyi  mount_path.pyi  next_available_filename.pyi  openstruct.pyi  popen_forked.pyi  (+8 more)
(+440 files in other folders)
